--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-regress",
   "description": "CSS regression Testing Plugin",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "homepage": "https://github.com/dietaikonauten/grunt-regress",
   "author": {
     "name": "Haithem Bel Haj",
@@ -39,10 +39,11 @@
     "phantomjs2": "^2.0.0"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "time-grunt": "^1.2.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
