--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "mocha"
   },
   "dependencies": {
     "base64-stream": "^0.1.2",
@@ -37,13 +37,13 @@
     "open": "0.0.5",
     "parse-cookie-phantomjs": "^1.0.0",
     "parse-headers": "^2.0.0",
-    "phantomjs2": "2.0.0"
+    "phantomjs": "^2.1.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3",
+    "mocha": "^2.4.5",
     "time-grunt": "^1.2.1"
   },
   "peerDependencies": {
